HVAC Backup 2/objects/PinCode__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>PinCodes</relationshipLabel>
        <relationshipName>PinCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <label>Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <label>Match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <externalId>true</externalId>
        <label>Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Formula__c</fullName>
        <formula>SUBSTITUTE( Sector__c , &quot; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Locality__c</fullName>
        <label>Sub Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PinCode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Postal_Code__c</columns>
        <columns>State__c</columns>
        <columns>Sector__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Pincode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PinCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>